--- a/.stylelintrc
+++ b/.stylelintrc
@@ -20,8 +20,12 @@
       }
     ],
     "plugin/selector-bem-pattern": {
-      "componentName": "[a-zA-Z0-9]+$",
-      "componentSelectors": "^(?:\\.(?:{componentName}|is[-](?:[a-zA-Z0-9-_]*))[ ]?(?:__[a-zA-Z0-9-_]+)?(?:_[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*){0,2}[ ]?)+$"
+      "componentName": "[A-Z]+",
+      "componentSelectors": {
+        "initial": "^\\.{componentName}(?:-[a-z]+)?$",
+        "combined": "^\\.combined-{componentName}-[a-z]+$"
+      },
+      "utilitySelectors": "^\\.util-[a-z]+$"
     }
   }
 }
