--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,11 @@
       "type": "npm",
       "script": "build",
       "problemMatcher": []
+    },
+    {
+      "type": "gulp",
+      "task": "build",
+      "problemMatcher": []
     }
   ]
 }
